# supabase-miso

./: .gitignore  CHANGELOG.md  Makefile  README.md  cabal.project  flake.nix  miso-supabase.cabal  package.json  supabase-miso.cabal
.github/workflows/: main.yml
app/: Main.hs
js/: supabase-miso.js
public/: app.wasm
src/Supabase/Miso/: Auth.hs  Core.hs  Database.hs  Edge.hs  Realtime.hs  Storage.hs
static/: index.html
tmp/: supabase1.mjs  supabase2.mjs
ts/: index.ts
