cabal-version:      3.0
name:               supabase-miso
version:            0.1.0.0
synopsis:           A Haskell miso client library for supabase.js
description:        miso integration with supabase.js
homepage:           https://github.com/haskell-miso/supabase-miso
license:            BSD-3-Clause
license-file:       LICENSE
author:             dmjio
maintainer:         code@dmj.io
copyright:          dmjio (c) 2025
category:           Database
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: README.md

common wasm
  if arch(wasm32)
    ghc-options:
      -Wall
      -no-hs-main
      -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
      -ddump-splices
    cpp-options:
      -DWASM

library
  hs-source-dirs:
    src
  build-depends:
    base < 5, miso, jsaddle, aeson, time, unordered-containers, vector, hashable
  exposed-modules:
    Supabase.Miso.Auth
    Supabase.Miso.Database
    Supabase.Miso.Edge
    Supabase.Miso.Realtime
    Supabase.Miso.Storage
  default-language:
    Haskell2010

executable app
  import:
    wasm
  main-is:
    Main.hs
  build-depends:
    base < 5, miso, jsaddle, aeson
  js-sources:
    js/supabase-miso.js
  hs-source-dirs:
    app
  ghc-options:
    -Wall
  default-language:
    Haskell2010
  default-extensions:
    CPP TemplateHaskell
